# src/routes/specifications.routes.ts
@@ -1,10 +1,12 @@
 import { Request, Response, Router } from "express";
-import { createSpecificationController } from "../modules/cars/useCases/createSpecification";
+import { ensureAuthenticated } from "../middlewares/ensureAuthenticated";
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
 
 const specificationRoutes = Router();
 
-specificationRoutes.post("/", (request: Request, response: Response) => {
-  return createSpecificationController.handle(request, response);
-});
+const createSpecificationController = new CreateSpecificationController();
+
+specificationRoutes.use(ensureAuthenticated)
+specificationRoutes.post("/", createSpecificationController.handle);
 
 export { specificationRoutes };
